<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="months_full_name">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    
    
    
    <string name="app_name">WeBuyForYou</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add">Add</string>

    <string name="title_details">Event details</string>
    <string name="title_birthdays">Upcoming BirthDays</string>
    <string name="title_settings">Settings</string>
    <string name="you_don_t_have_any_birthday_events_today_">You don\'t have any birthday events today.</string>
    <string name="time_frequency">Time frequency</string>
    <string name="days_frequency">Days frequency</string>
    <string name="pref_key_remainder_days_preference">remainder_days_preference</string>
    <string name="pref_key_remainder_time_preference">remainder_time_preference</string>
    <string name="pref_key_remainder_birthday_interval">list_preference</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="birthday_remainder">Event remainder</string>
    <string name="day_remainder">Remaind me prior</string>
    <string name="time_remainder">Time remainder</string>
    <string name="menu_about">About</string>
    <string name="title_about">About</string>
    <string name="menu_favorite">Favorites</string>
    <string name="you_don_t_have_any_favorites_events_">You don\'t have any favorite events.</string>
    <string name="title_favorites">Favorites</string>
    <string name="button_import_from_facebook">Import from Facebook</string>
    <string name="button_import_from_linkedin">Import from Linkedin</string>
    <string name="title_import_birthday">Import Birthday</string>
    <string name="hint_name">Name</string>
    <string name="hint_occasion">Occasion</string>
    
    <string name="emailid">webuyforyou7@gmail.com</string>
    <string name="password">yaminivb4u</string>
    <string name="consult_us_to_buy_a_gift">Consult us to Buy a Gift</string>
    <string name="import_from_calendar">Import from calendar</string>
    
</resources>
