<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->


<!-- This is a primitive example showing the different types of preferences available. -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="dialog_based_preferences" >
        <ListPreference
            android:dialogTitle="Birthdays"
            android:entries="@array/birthday_list_preference"
            android:entryValues="@array/birthday_value_list_preference"
            android:key="@string/pref_key_remainder_birthday_interval"
            android:summary="You can select your occation remainder based on your wish"
            android:title="Remainder birthdays" />
        <ListPreference
            android:dialogTitle="Days"
            android:entries="@array/remainder_days_list_preference"
            android:entryValues="@array/remainder_days_value_preference"
            android:key="@string/pref_key_remainder_days_preference"
            android:summary="You can select your occation remainder based on your wish"
            android:title="@string/days_frequency" />
        <ListPreference
            android:dialogTitle="Time"
            android:entries="@array/remainder_time_list_preference"
            android:entryValues="@array/remainder_time_value_preference"
            android:key="@string/pref_key_remainder_time_preference"
            android:summary="You can select your occation remainder based on your wish"
            android:title="@string/time_frequency" />
    </PreferenceCategory>
    <PreferenceCategory android:title="launch_preferences" >
        <PreferenceScreen
            android:summary="Brief Summary About As"
            android:title="About As" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.webuyforyou.in/" />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>