<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/facebook_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ecf0f1"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/button_import_from_facebook"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bdc3c7" />

    <TextView
        android:id="@+id/linkedin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ecf0f1"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/button_import_from_linkedin"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bdc3c7" />

    <TextView
        android:id="@+id/calander_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ecf0f1"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/import_from_calendar"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bdc3c7" />

</LinearLayout>